--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -84,31 +84,36 @@ server=/*testflight.apple.com/8.8.4.4
 [policy]
 static=Apple, direct, proxy, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Apple.png
 static=Bilibili, direct, 🇭🇰香港, 🇨🇳台湾, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Bilibili.png
-static=OpenAI, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
-static=Emby, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Emby.png
-static=Netflix, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Netflix.png
-static=TikTok, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Tiktok.png
-static=Youtube, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-static=PikPak, direct, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/PikPak.png
-static=Telegram, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
-static=Instagram, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Instagram.png
-static=Twitter, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Twitter.png
-static=国际媒体, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/shoujiqiyuan/PokemonGOforQuanX/master/IconSet/150.png
-static=全球加速, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/shoujiqiyuan/PokemonGOforQuanX/master/IconSet/149.png
+static=OpenAI, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
+static=Netflix, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Netflix.png
+static=TikTok, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Tiktok.png
+static=Youtube, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+static=PikPak, direct, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/PikPak.png
+static=Telegram, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
+static=Instagram, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Instagram.png
+static=Twitter, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Twitter.png
+static=国际媒体, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/shoujiqiyuan/PokemonGOforQuanX/master/IconSet/150.png
+static=全球加速, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, img-url=https://raw.githubusercontent.com/shoujiqiyuan/PokemonGOforQuanX/master/IconSet/149.png
 static=Guard, direct, reject, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/AdBlock.png
 static=黑白名单, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/face/master/Final.png
-url-latency-benchmark=延迟最低, resource-tag-regex=FlowerCloud, server-tag-regex=^((?!(Traffic|Expire)).)*$, check-interval=1800, tolerance=10, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Auto.png
 static=🇭🇰香港, server-tag-regex=🇭🇰|香港|HK|Hong, img-url=https://raw.githubusercontent.com/Orz-3/face/master/HK.png
 static=🇨🇳台湾, server-tag-regex=🇨🇳|台湾|TW|Taiwan, img-url=https://raw.githubusercontent.com/Orz-3/face/master/TW.png
 static=🇸🇬新加坡, server-tag-regex=🇸🇬|新加坡|SG|Singapore, img-url=https://raw.githubusercontent.com/Orz-3/face/master/SG.png
 static=🇯🇵日本, server-tag-regex=🇯🇵|日本|JP|Japan, img-url=https://raw.githubusercontent.com/Orz-3/face/master/JP.png
 static=🇺🇸美国, server-tag-regex=🇺🇸|美国|US|United, img-url=https://raw.githubusercontent.com/Orz-3/face/master/US.png
-
 # 本地服务器部分
 [server_local]
 
 # 节点远程订阅
 [server_remote]
+https://sub.store/download/Nexitally, tag=Nexitally, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Naiyou.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/Atomlantis#rename=Atom-@, tag=Atomlantis, img-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/atomlantis.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/Metaverse#sort=0.2X>🇭🇰>🇨🇳>🇸🇬>🇯🇵>🇺🇸, tag=Metaverse, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/MESL.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/shouhou, tag=守候, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Coffee1.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/TAG, tag=TAG, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Tag.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/SESE, tag=子墨, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Texon3.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/Lend#sort=喵呜>direct>0.01>🇭🇰, tag=Lend, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Lend3.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/CTC, tag=CTC, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Fishport0.png, update-interval=172800, opt-parser=true, enabled=true
 
 # 远程分流规则策略组
 [filter_remote]
@@ -135,9 +140,6 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Str
 
 # OpenAI
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/OpenAI.list, tag=OpenAI, force-policy=OpenAI, update-interval=172800, opt-parser=true, enabled=true
-
-# Emby
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Emby/Emby.list, tag=Emby, force-policy=Emby, update-interval=172800, opt-parser=true, enabled=true
 
 # Netflix
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Netflix/Netflix.list, tag=Netflix, force-policy=Netflix, update-interval=172800, opt-parser=true, enabled=true
@@ -203,15 +205,11 @@ final, 黑白名单
 # 远程复写规则
 [rewrite_remote]
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=boxjs, update-interval=172800, opt-parser=true, enabled=true
-https://github.com/BiliUniverse/Enhanced/raw/main/modules/BiliBili.Enhanced.snippet, tag=📺 BiliBili: ⚙ Enhanced, update-interval=172800, opt-parser=false, enabled=true
-https://github.com/BiliUniverse/Global/raw/main/modules/BiliBili.Global.snippet, tag=📺 BiliBili: 🌐 Global, update-interval=172800, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/WeiRen0/NewFree/main/XMSVIP2.js, tag=伟人喜马拉雅SVIP2, update-interval=172800, opt-parser=true, enabled=false
-https://raw.githubusercontent.com/WeiRen0/NewFree/main/XMSVIP.js, tag=伟人喜马拉雅SVIP, update-interval=172800, opt-parser=true, enabled=true
+https://github.com/BiliUniverse/Enhanced/raw/main/modules/BiliBili.Enhanced.snippet, tag=📺 BiliBili: ⚙ Enhanced, update-interval=172800, opt-parser=false, enabled=false
+https://github.com/BiliUniverse/Global/raw/main/modules/BiliBili.Global.snippet, tag=📺 BiliBili: 🌐 Global, update-interval=172800, opt-parser=false, enabled=false
 https://raw.githubusercontent.com/zZPiglet/Task/master/UnblockURLinWeChat.conf, tag=微信解锁被屏蔽的URL, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/AdBlock/StartUp.conf, tag=墨鱼去开屏广告V2.0, update-interval=172800, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/AdBlock/Amap.conf, tag=高德地图APP净化, update-interval=172800, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/WeiRen0/Scripts/main/cytq.js, tag=彩云天气, update-interval=172800, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, tag=Sub-Store, update-interval=172800, opt-parser=false, enabled=false
+https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, tag=Sub-Store, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/Orz-3/QuantumultX/master/Bili_Auto_Regions.conf, tag=Bilibili换区脚本, update-interval=172800, opt-parser=true, enabled=false
 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/TestFlightDownload.conf, tag=TestFlight区域限制解除, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/AllInOne/AllInOne.conf, tag=去广告规则, update-interval=86400, opt-parser=false, enabled=true
@@ -255,4 +253,4 @@ skip_validating_cert = true
 passphrase =
 p12 =
 
-hostname= rdcseason.m.jd.com, *.googlevideo.com, trade-acs.m.taobao.com,as.xiaojukeji.com, as.xiaojukeji.com, wq.jd.com, api.m.jd.com, -*snssdk.com, -*amemv.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, duckduckgo.com, boxer.baidu.com, *.kuwo.cn, pan.baidu.com,auth.aliyundrive.com,-buy.itunes.apple.com,m5.amap.com,-g.alicdn.com
+hostname= rdcseason.m.jd.com, *.googlevideo.com, trade-acs.m.taobao.com,as.xiaojukeji.com, as.xiaojukeji.com, wq.jd.com, api.m.jd.com, -*snssdk.com, -*amemv.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, duckduckgo.com, boxer.baidu.com, *.kuwo.cn, pan.baidu.com,auth.aliyundrive.com,-buy.itunes.apple.com,-g.alicdn.com
