--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -114,6 +114,9 @@ https://sub.store/download/TAG, tag=TAG, img-url=https://raw.githubusercontent.c
 https://sub.store/download/SESE, tag=子墨, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Texon3.png, update-interval=172800, opt-parser=true, enabled=true
 https://sub.store/download/Lend#sort=喵呜>direct>0.01>🇭🇰, tag=Lend, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Lend3.png, update-interval=172800, opt-parser=true, enabled=true
 https://sub.store/download/CTC, tag=CTC, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Fishport0.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/dimension, tag=次元云, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png, update-interval=172800, opt-parser=true, enabled=false
+https://sub.store/download/unicorn, tag=独角兽, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Paofu2.png, update-interval=172800, opt-parser=true, enabled=false
+https://sub.store/download/XFSS, tag=XFSS, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/xfss1.png, update-interval=172800, opt-parser=true, enabled=false
 
 # 远程分流规则策略组
 [filter_remote]
