--- a/loon/Loon.conf
+++ b/loon/Loon.conf
@@ -60,7 +60,7 @@ dl.l.google.com = server:119.29.29.29
 [Proxy]
 
 [Remote Proxy]
-机场名 = 【机场订阅】
+Nexitally = https://sub.store/download/Nexitally
 
 [Proxy Group]
 节点选择 = select,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
