--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -194,10 +194,7 @@ ip-cidr, 203.107.1.1/24, reject
 ip-cidr, 183.240.197.130/32, direct
 
 # Nexitally
-host, sub.nexconvert.com, direct
-
-# 高德地图APP净化
-host, amdc.m.taobao.com, reject
+host, rjptcl.lol, direct
 
 # Safari 防跳转
 host, app-site-association.cdn-apple.com, reject
