--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -16,12 +16,11 @@ parsers: # array
           e.name = e.name.replace(" | 视频", "").replace(" | 游戏", "")
         })
         let proxies1 = rawObj.proxies.filter(e => e.name.includes('🇭🇰'))
-        let proxies2 = rawObj.proxies.filter(e => e.name.includes('🇨🇳'))
+        let proxies2 = rawObj.proxies.filter(e => e.name.includes('🇨🇳') || e.name.includes('🇹🇼'))
         let proxies3 = rawObj.proxies.filter(e => e.name.includes('🇸🇬'))
         let proxies4 = rawObj.proxies.filter(e => e.name.includes('🇯🇵'))
         let proxies5 = rawObj.proxies.filter(e => e.name.includes('🇺🇸'))
-        let proxies6 = rawObj.proxies.filter(e => 
-                                         !e.name.includes('🇭🇰') && !e.name.includes('🇨🇳')
+        let proxies6 = rawObj.proxies.filter(e => !e.name.includes('🇭🇰') && !e.name.includes('🇨🇳') && !e.name.includes('🇹🇼')
                                       && !e.name.includes('🇸🇬') && !e.name.includes('🇯🇵') && !e.name.includes('🇺🇸')
                                       && !e.name.includes('剩余') && !e.name.includes('套餐') && !e.name.includes('官网')
                                       && !e.name.includes('GB') && !e.name.includes('Traffic') && !e.name.includes('Expire')
@@ -67,31 +66,31 @@ parsers: # array
 
         - name: 🍎 苹果服务
           type: select
-          proxies: [DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
+          proxies: [DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
 
         - name: 📺 Bilibili
           type: select
-          proxies: [ DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点]
+          proxies: [ DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点]
 
         - name: 🧩 微软服务
           type: select
-          proxies: [DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
+          proxies: [DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
 
         - name: 🌌 Google
           type: select
-          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
+          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
 
         - name: 📟 Telegram
           type: select
-          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
+          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
 
         - name: 🐦 推特消息
           type: select
-          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
+          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
 
         - name: 🤖 OpenAI
           type: select
-          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
+          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
 
         - name: 🎥 PikPak
           type: select
@@ -103,15 +102,15 @@ parsers: # array
 
         - name: 🌏 国外网站
           type: select
-          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
+          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
 
         - name: 📹 国际媒体
           type: select
-          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
+          proxies: [🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
 
         - name: 🎮 Game
           type: select
-          proxies: [DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
+          proxies: [DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇸🇬 新加坡节点, 🇺🇸 美国节点, 🇯🇵 日本节点, ⚠ 故障转移]
 
         - name: 🆎 AdBlock
           type: select
@@ -119,7 +118,7 @@ parsers: # array
 
         - name: 🐟 漏网之鱼
           type: select
-          proxies: [DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, ⚠ 故障转移]
+          proxies: [DIRECT, 🚀 节点选择, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇹🇼 台湾节点, ⚠ 故障转移]
 
         - name: 🇭🇰 香港节点
           type: url-test # select/url-test/fallback/load-balance
@@ -129,7 +128,7 @@ parsers: # array
           proxies:
             - DIRECT
 
-        - name: 🇨🇳 台湾节点
+        - name: 🇹🇼 台湾节点
           type: url-test # select/url-test/fallback/load-balance
           url: http://www.gstatic.com/generate_204
           interval: 300
@@ -171,11 +170,11 @@ parsers: # array
 
       commands:
         - proxy-groups.🚀 节点选择.proxies=[]proxyNames
-        - proxy-groups.🇭🇰 香港节点.proxies=[]proxyNames|^(🇭🇰|香港|HK)+(.*)$
-        - proxy-groups.🇨🇳 台湾节点.proxies=[]proxyNames|^(🇨🇳|台湾|台灣|TW|Taiwan)+(.*)$
-        - proxy-groups.🇸🇬 新加坡节点.proxies=[]proxyNames|^(🇸🇬|新加坡|狮城|SG|Singapore)+(.*)$
-        - proxy-groups.🇯🇵 日本节点.proxies=[]proxyNames|^(🇯🇵|日本|东京|JP|Japan)+(.*)$
-        - proxy-groups.🇺🇸 美国节点.proxies=[]proxyNames|^(🇺🇸|美国|美國|US|American)+(.*)$
+        - proxy-groups.🇭🇰 香港节点.proxies=[]proxyNames|(🇭🇰|香港|HK|Hong)
+        - proxy-groups.🇹🇼 台湾节点.proxies=[]proxyNames|(🇨🇳|🇹🇼|台湾|台灣|TW|Taiwan)
+        - proxy-groups.🇸🇬 新加坡节点.proxies=[]proxyNames|(🇸🇬|新加坡|狮城|SG|Singapore)
+        - proxy-groups.🇯🇵 日本节点.proxies=[]proxyNames|(🇯🇵|日本|东京|JP|Japan)
+        - proxy-groups.🇺🇸 美国节点.proxies=[]proxyNames|(🇺🇸|美国|美國|US|American)
         - proxy-groups.⚠ 故障转移.proxies=[]proxyNames
 
       mix-rule-providers: # 添加规则集
