--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -1,11 +1,7 @@
 # 参考https://github.com/Fndroid/clash_for_windows_pkg/issues/2193
-# Author:https://github.com/Repcz
-# TG:https://t.me/QVQ_Channel
+# 参考Author:https://github.com/Repcz
 # 以 ';' 或 '#' 或 '//' 开头的配置文件行为注释行
-#
-# 最后更新时间: 2023/9/1
-#
-# ================
+# =========================================
 
 parsers: # array
   - reg: ^.*$                 # ^.*$ 匹配所有订阅，或  - url: https://example.com/profile.yaml 指定订阅
@@ -39,17 +35,16 @@ parsers: # array
       mix-object:             # 对象合并至原配置最外层中
         mixed-port: 7890      # 混合端口 HTTP和SOCKS5用一个端口
         allow-lan: true       # 允许局域网的连接（可用来共享代理）
-        bind-address: "*"     # 仅在将allow-lan设置为true时适用 "*": 绑定所有IP地址
-        ipv6: false           # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
-        mode: rule            # 规则模式：rule（规则） / global（全局代理）/ direct（全局直连）/ script (脚本)
-        log-level: info       # 设置日志输出级别 (5 个级别：silent / error / warning / info / debug）
-        external-controller: 127.0.0.1:9090   #外部控制器,可以使用 RESTful API 来控制你的 clash 内核
-
+        bind-address: "*"     # 仅在将allow-lan设置为true时适用,"*": 绑定所有IP地址
+        ipv6: false           # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求记录
+        mode: rule            # 规则模式：rule/ global/ direct/ script
+        log-level: info       # 设置日志输出级别 (5个级别：silent / error / warning / info / debug)
+        external-controller: 127.0.0.1:9090   #外部控制器,可以使用 RESTFUL API 来控制你的 clash 内核
         dns:
-          enable: true             # 关闭将使用系统 DNS
-          ipv6: false              # IPV6解析开关；如果为false，将返回ipv6结果为空
-          enhanced-mode: fake-ip   # 模式：redir-host或fake-ip
-          listen: 0.0.0.0:53       # DNS监听地址
+          enable: true                    # 关闭将使用系统 DNS
+          ipv6: false                     # IPV6解析开关；如果为false，将返回ipv6结果为空
+          enhanced-mode: fake-ip          # 模式：redir-host或fake-ip
+          listen: 0.0.0.0:53              # DNS监听地址
           fake-ip-range: 198.18.0.1/16    # Fake-IP解析地址池
           fake-ip-filter: ['*.lan', 'cable.auth.com', '*.msftconnecttest.com', '*.msftncsi.com', 'network-test.debian.org', 'detectportal.firefox.com', 'resolver1.opendns.com', '*.srv.nintendo.net', '*.stun.playstation.net', 'xbox.*.microsoft.com', '*.xboxlive.com', 'stun.*', 'global.turn.twilio.com', 'global.stun.twilio.com', 'localhost.*.qq.com', 'localhost.*.weixin.qq.com', '*.logon.battlenet.com.cn', '*.logon.battle.net', '*.blzstatic.cn', 'music.163.com', '*.music.163.com', '*.126.net', 'musicapi.taihe.com', 'music.taihe.com', 'songsearch.kugou.com', 'trackercdn.kugou.com', '*.kuwo.cn', 'api-jooxtt.sanook.com', 'api.joox.com', 'joox.com', 'y.qq.com', '*.y.qq.com', 'streamoc.music.tc.qq.com', 'mobileoc.music.tc.qq.com', 'isure.stream.qqmusic.qq.com', 'dl.stream.qqmusic.qq.com', 'aqqmusic.tc.qq.com', 'amobile.music.tc.qq.com', '*.xiami.com', '*.music.migu.cn', 'music.migu.cn', 'proxy.golang.org', '*.mcdn.bilivideo.cn', '*.cmpassport.com', 'id6.me', 'open.e.189.cn', 'mdn.open.wo.cn', 'opencloud.wostore.cn', 'auth.wosms.cn', '*.jegotrip.com.cn', '*.icitymobile.mobi', '*.pingan.com.cn', '*.cmbchina.com', 'pool.ntp.org', '*.pool.ntp.org', 'ntp.*.com', 'time.*.com', 'ntp?.*.com', 'time?.*.com', 'time.*.gov', 'time.*.edu.cn', '*.ntp.org.cn', 'PDC._msDCS.*.*', 'DC._msDCS.*.*', 'GC._msDCS.*.*']
           # fake ip 白名单列表'以下地址不会下发fakeip映射用于连接
@@ -303,18 +298,18 @@ parsers: # array
         - RULE-SET,Lan,DIRECT
         - RULE-SET,Download,DIRECT
         - RULE-SET,Anti-AD,🆎 AdBlock
-        - RULE-SET,OpenAI,🤖 OpenAI
         - RULE-SET,Apple,🍎 苹果服务
         - RULE-SET,Microsoft,🧩 微软服务
+        - RULE-SET,BiliBili,📺 Bilibili
         - RULE-SET,Youtube,🌌 Google
         - RULE-SET,Google,🌌 Google
+        - RULE-SET,OpenAI,🤖 OpenAI
         - RULE-SET,Telegram,📟 Telegram
         - RULE-SET,Twitter,🐦 推特消息
-        - RULE-SET,BiliBili,📺 Bilibili
         - RULE-SET,PikPak,🎥 PikPak
         - RULE-SET,Game,🎮 Game
+        - RULE-SET,ChinaIP,🌏 国内网站
         - RULE-SET,ProxyMedia,📹 国际媒体
         - RULE-SET,ProxyGFWlist,🌏 国外网站
-        - RULE-SET,ChinaIP,🌏 国内网站
         - GEOIP,CN,🌏 国内网站
         - MATCH,🐟 漏网之鱼
